<resources>
    <string name="app_name">Check Update</string>

    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="about">О программе</string>

    <string name="vk"><a href="https://vk.com/fas.offical">Forzar AppS | FAS</a></string>
    <string name="mail"><a href="mailto:fas.offical@ya.ru">fas.offical@ya.ru</a></string>
    <string name="disk"><a href="https://disk.yandex.ru/client/disk">https://disk.yandex.ru/client/disk</a></string>

    <string name="NewUpdate">Что нового?</string>
    <string name="CheckUpdate">Проверить обновление</string>

    <string name="question">?</string>
</resources>