<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:onClick="onSettingsMenuClick"
        android:title="@string/settings"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:onClick="onHelpMenuClick"
        android:title="@string/help"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_about"
        android:onClick="onAboutMenuClick"
        android:title="@string/about"
        app:showAsAction="always"/>
</menu>